--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "server": "node src/server/app.js"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.0.18",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
@@ -22,7 +24,8 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "react-swipeable": "^7.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.3",
